--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Sheulydsp.github.io/kanban-dashboard",
   "name": "agile-kanban",
   "private": true,
   "version": "0.0.0",
